[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
# 优化合约大小的关键配置
opt-level = "z"          # 优化大小而非速度
lto = "fat"              # 启用完整链接时优化
codegen-units = 1        # 使用单个代码生成单元
panic = "abort"          # 减少 panic 处理代码
strip = true             # 移除调试符号
overflow-checks = false  # 禁用溢出检查以减少代码

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Dependency
[workspace.dependencies]
