[package]
name = "mars_vaults_substreams"
version = "0.1.0"
edition = "2021"

[lib]
name = "mars_vaults_substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.0"
substreams-solana = "0.9.0"
substreams-entity-change = "1.3.0"
prost = "0.12.0"
prost-types = "0.12.0"
bs58 = "0.5.0"

[build-dependencies]
substreams-solana-codegen = "0.9.0"