[package]
name = "mars_vaults_substreams"
version = "0.1.0"
edition = "2021"

[lib]
name = "mars_vaults_substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.6.2"
substreams-solana = "0.14.2"
substreams-database-change = "2.1.2"
substreams-entity-change = "2.0.0"
prost = "0.13"
prost-types = "0.13"
bs58 = "0.5"
hex = "0.4"

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = "z"
lto = true
strip = true
