[package]
name = "mars"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mars"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# 默认启用大小优化特性
default = ["size-optimized"]
size-optimized = ["no-log-ix-name"]  # 减少指令名称日志
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-bpf = []
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
pyth-solana-receiver-sdk = "1.0.1"
pythnet-sdk = "2.3.1"
base64ct = "=1.6.0"
